change file index and style.css add logog in brain academy 27.10.2017

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<div class="all">
 	<header id="header">
-		<div>
-			<div class="top_br"><img src="brain.png" alt="brain_logo" class="logo_academy"></div>
+
 			<h1 class="first_hh1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, id. <em class="em_1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, facilis, architecto. Quisquam, ea autem aliquam.</em></h1>
 			<div class="first_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, quis nihil magni alias ut, at aspernatur temporibus eligendi suscipit odit et. Praesentium, delectus, aliquid accusamus quibusdam perspiciatis ea quia consectetur.</div>
 			<ul class="zmist">
@@ -23,7 +23,7 @@
 				<li><a href="#sc9">Section-09</a></li>
 				<li><a href="#sc10">Section-10</a></li>
 			</ul>
-		</div>
+		
 	</header>
 
 	<main>
@@ -123,5 +123,6 @@
 		<a href="#header" class="sl_bottom">Back to top of page</a>
 	</div>
 	</main>
+	</div>
 </body>
 </html>
